[workspace]
members = [
    "crates/yagna_offer_server",
]

[[bin]]
name = "offer_processor"
path = "src/main.rs"

[package]
name = "offer_processor"
description = "Payment processor for ERC20 tokens"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
version = "0.5.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-httpauth = "0.8"
actix-web = { version = "4", default-features = false, features = [
    "macros",
] }
actix-web-actors = { version = "4", default-features = false }
anyhow = "1"
awc = { version = "3.1", features = ["rustls"] }
base64 = "0.22"
bollard = "0.14"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.2"
dotenv = "0.15"
env_logger = "0.10"
eth-keystore = "0.5"
fastrand = "2.0.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
humantime = "2.1"
itertools = "0.11"
lazy_static = "1.4.0"
log = "0.4.17"
metrics = "0.12"
metrics-core = "0.5.2"
metrics-runtime = { version = "0.13.1", default-features = false, features = ["observers"] }
mime_guess = "2.0.3"
parking_lot = "0.12"
rand = "0.9.2"
regex = "1.10.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rust-embed = "6.8"
rust_decimal = "1.26"
rustc-hex = "2.1"
secp256k1 = "0.27" # version has to match web3
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha3 = "0.10.6"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "runtime-tokio"] }
stream-rate-limiter = "0.4"
structopt = "0.3"
thiserror = "1.0"
thunderdome = "0.6"
tokio = { version = "^1.21", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8.8" # need some refactor to update
trust-dns-resolver = "0.23"
url = "2.4"
uuid = { version = "1.2", features = ["serde", "v4"] }
web3 = { version = "0.19", default-features = false, features = [
    "signing",
    "http-rustls-tls",
] }
ya-client-model = { version = "0.7" }
# local dependencies
yagna_offer_server = { path = "crates/yagna_offer_server", version = "=0.4.12" }

[dependencies]
actix-web = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }

[profile.dev]
debug = false
incremental = false

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

[profile.release-fast]
inherits = "release"
incremental = false
opt-level = 1
panic = "unwind"

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
