[package]
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>"]
description = "Helper for blockchain integration tests"
edition = "2021"
name = "yagna-offer-server"
license = "MIT"
repository = "https://github.com/scx1332/"
version = "0.5.1"

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
env_logger =  { workspace = true }
log =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
structopt = { workspace = true }
tokio = { workspace = true }
ya-client-model = {workspace = true}
rand = { workspace = true }
sha3 = { workspace = true }
reqwest = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }

